Regression: Crash when selecting an object with an orphaned geo node link #111411

Closed
opened 2023-08-23 00:15:52 +02:00 by Max · 3 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-10 21:29, hash: rBca1642cd0c5c
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-09 02:25, hash: rB756538b4a117

Short description of error
In the file that I'll attach, selecting the Cube in the Scene Collection in the View Layer immediately crashes and closes Blender.
Switching to the .blend file display, you can see orphaned node group references to another file.
These are at fault, as the geo node group "Geometry Nodes.002" from Cube used them.
The crash is associated with the geo node editor view. Changing that area to something else before clicking on the Cube doesn't crash Blender. Changing it back to the editor after clicking on the Cube crashes it.

Expected behavior
Instead of crashing, the geo node editor should just display orphaned/broken groups.

Exact steps for others to reproduce the error

  1. Open the .blend file
  2. Click on the Cube object in the view layer.
  3. (Blender crashes/closes immediately)

Thanks for your consideration. :)

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-10 21:29, hash: `rBca1642cd0c5c` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-09 02:25, hash: `rB756538b4a117` **Short description of error** In the file that I'll attach, selecting the Cube in the Scene Collection in the View Layer immediately crashes and closes Blender. Switching to the .blend file display, you can see orphaned node group references to another file. These are at fault, as the geo node group "Geometry Nodes.002" from Cube used them. The crash is associated with the geo node editor view. Changing that area to something else before clicking on the Cube doesn't crash Blender. Changing it back to the editor after clicking on the Cube crashes it. **Expected behavior** Instead of crashing, the geo node editor should just display orphaned/broken groups. **Exact steps for others to reproduce the error** 1. Open the .blend file 2. Click on the Cube object in the view layer. 3. (Blender crashes/closes immediately) Thanks for your consideration. :)
Max added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-23 00:15:53 +02:00
Iliya Katueshenock added
Module
Nodes & Physics
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-08-23 00:22:48 +02:00
Iliya Katueshenock added this to the 3.6 LTS milestone 2023-08-23 00:25:30 +02:00

The socket drawing callback must check the node declarations to add attribute search. But the declaration may not be valid and require its updating. The callback takes a read-only node and socket. Your thoughts @HooglyBoogly (Would this kind of behavior be a safe choice) ?

The socket drawing callback must check the node declarations to add attribute search. But the declaration may not be valid and require its updating. The callback takes a read-only node and socket. Your thoughts @HooglyBoogly (Would this kind of behavior be a safe choice) ?
Iliya Katueshenock changed title from Crash when selecting an object with an orphaned geo node link to Regression: Crash when selecting an object with an orphaned geo node link 2023-08-23 00:29:29 +02:00

Hm... caused by 1efc94bb2f ?
I don't see any relation in the assertion and the only related commit for the entire bisect period...

Hm... caused by 1efc94bb2f7b0321935ce6564b23d5d92ee41594 ? I don't see any relation in the assertion and the only related commit for the entire bisect period...
Member

I think updating the node declarations should be done eagerly rather than lazily, so there shouldn't be the need to do it on a const node. But I haven't looked into this specific issue of why the update is missing yet.

I think updating the node declarations should be done eagerly rather than lazily, so there shouldn't be the need to do it on a `const` node. But I haven't looked into this specific issue of why the update is missing yet.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-14 11:51:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111411
No description provided.