Fix #111411: crash with group node that references linked-but-not-found group

These group nodes currently don't have a socket declaration for every socket.
Instead we just don't touch the sockets at all so that things have not changed
when the node group is found again.

Pull Request: https://projects.blender.org/blender/blender/pulls/112373